Fixed alignment, padding and size of nav search function

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,6 +126,10 @@ li.modal.open {
     margin: auto 0;
 }
 
+.form-control {
+    height: 100%;
+}
+
 /* ---------- Buttons ---------- */
 .btn {
     border:none;
